# sol-starter

./: .gitignore  .prettierignore  CLAUDE.md  README.md  biome.json  components.json  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.backend.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json
.github/workflows/: CI.yml
anchor/: .gitignore  Anchor.toml  codama.js  tsconfig.json
anchor/programs/solanadapp/: Cargo.toml
anchor/programs/solanadapp/src/: lib.rs
anchor/src/: index.ts  solanadapp-exports.ts
anchor/src/helpers/: get-program-accounts-decoded.ts  get-program-accounts.ts
anchor/tests/: solanadapp.spec.ts  solanadapp.test.ts
src/: app.tsx
src/components/: app-header.tsx  app-layout.tsx  app-providers.tsx  react-query-provider.tsx  theme-provider.tsx
src/components/account/: account-ui.tsx
src/components/dashboard/: dashboard-feature.tsx
src/components/solana/: solana-provider.tsx  use-wallet-transaction-sign-and-send.tsx
src/components/solanadapp/: solanadapp-data-access.tsx  solanadapp-feature.tsx  solanadapp-ui.tsx
src/components/ui/: alert.tsx  dialog.tsx  dropdown-menu.tsx  table.tsx
test/program/: solanadapp.test.ts
utils/: airdrop.ts  index.ts  logging.ts
web/: app-routes.tsx
web/components/: app-alert.tsx  app-hero.tsx  app-modal.tsx
web/components/account/: account-feature-index.tsx
web/components/cluster/: cluster-ui.tsx
web/components/solana/: use-wallet-ui-signer.tsx
web/components/solanadapp/: solanadapp-ui.tsx
web/components/ui/: button.tsx  label.tsx
